--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
-    "chart.js": "^2.9.4"
+    "chart.js": "3.7.1"
   },
   "devDependencies": {
-    "@types/chart.js": "^2.9.29",
-    "snowpack": "^2.18.5",
-    "typescript": "^4.1.3"
+    "snowpack": "3.8.8",
+    "typescript": "4.6.2"
+  },
+  "scripts": {
+    "start": "snowpack dev --config ./snowpack-dev.config.js",
+    "build": "snowpack build --config ./snowpack-prod.config.js"
   }
 }
