--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "chart.js": "3.7.1"
+    "chart.js": "2.9.4"
   },
   "devDependencies": {
+    "@types/chart.js": "2.9.29",
     "snowpack": "3.8.8",
     "typescript": "4.6.2"
   },
